@@ -1,3 +1,7 @@
+2002-06-12  Christophe Merlet  <christophe@merlet.net>
+
+	* Makefile.am: Add $DESTDIR variable.
+
 2002-06-04  George Lebl <jirka@5z.com>
 
 	* logview.c: use _UI_SUBTREE instead of _UI_SUBTREE_STOCK since 
